fix: Patch of post UI 1. Modify the bootstrap card header style under dark mode 2. Move the queryPostByTitle method to dao/atrticles/GetPostByTitle 3. Correct the load method error to be 404 when there is no article found for a given post title

--- a/src/app.css
+++ b/src/app.css
@@ -95,6 +95,10 @@ div.multiselect > ul.options {
 		border-color: #4d4d4d;
 	}
 
+	body.dark .card-header {
+		border-bottom: 0.1rem solid rgb(178, 178, 178);
+	}
+
 	body.dark .card-body {
 		color: white;
 	}
